Fix tables alignment

--- a/source/stylesheets/components/_chart.scss
+++ b/source/stylesheets/components/_chart.scss
@@ -184,14 +184,6 @@
   }
 }
 
-.chart__table td {
-  text-align: right;
-}
-
-.chart__table td:first-child {
-  text-align: left;
-}
-
 .chart.expanded .chart__table tbody {
   display: flex;
 }
