--- a/source/stylesheets/layout/_table.scss
+++ b/source/stylesheets/layout/_table.scss
@@ -65,7 +65,7 @@ td {
 
 thead th,
 thead td {
-  text-align: right;
+  text-align: left;
   vertical-align: bottom;
 }
 
